--- a/style.css
+++ b/style.css
@@ -44,8 +44,10 @@ body {
     font-family: "Open Sans", sans-serif;
     font-size: 15px;
     background-color: rgb(78, 7, 7);
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+    max-width: 100%;
+    overflow-x: hidden;
     }
     header {
         color: #162133;
@@ -137,6 +139,7 @@ body {
             position: relative;
             margin-left: 250px;
             border-radius: 15px;
+            float: center;
         }
         .fling-minislide img{ 
             position:absolute; 
@@ -159,7 +162,8 @@ body {
             padding: 10px;
             font-family: Pacifico;
             font-size: 20px;
-            width: 100%;
+            width: 98%;
+            position: center;
         } 
 
         main div.movies {
